Fix 404 alignment

--- a/styles/404.module.scss
+++ b/styles/404.module.scss
@@ -1,18 +1,16 @@
 @use "Constants" as constants;
 
 .twoRows {
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  // text-align: center;
   align-items: center;
 }
 .lost {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  align-content: flex-start;
-  justify-content: flex-start;
 }
 .fourHundred {
   font-size: 6rem;
